...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/memory_holds"
                    android:textAppearance="?attr/textAppearanceTitleLarge" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/history_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceDisplayLarge"
                    android:textColor="?attr/colorPrimary"
                    tools:text="05:12" />
            </LinearLayout>
        </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_clip_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
...
