...
                android:text="@string/all_memory" />

        </com.google.android.material.chip.ChipGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/save" />
...
